--- a/src/css/game.module.css
+++ b/src/css/game.module.css
@@ -47,3 +47,18 @@
   text-align: right;
   margin: 0 20px;
 }
+
+.button {
+  text-align: center;
+  background-color: mediumseagreen ; 
+  color: white; 
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer; 
+  width: 30%;
+}
+
+.button:hover {
+  background-color: lightgreen; 
+}
