--- a/src/css/playerAction.module.css
+++ b/src/css/playerAction.module.css
@@ -6,13 +6,14 @@
   margin: 10px;
   background-color: blue;
   height: 500px;
+  justify-content: start;
 }
 
 .playerAction {
   grid-column: span 12; 
+  margin-bottom: 2px;
+  justify-content: flex-start;
   display: flex;
-  align-items: flex-start;
-  margin-bottom: 3;
 }
 
 .playerName {
