--- a/src/css/playerDisplay.module.css
+++ b/src/css/playerDisplay.module.css
@@ -19,6 +19,11 @@
     padding: 100px;
 }
 
+.teamImage {
+    width: 70%;
+    padding: 30px 0 10px;
+}
+
 .player {
     display: grid;
     grid: repeat(2, auto) / repeat(6, 1fr);
@@ -36,9 +41,11 @@
 }
 
 .redTeam {
-    /* display: grid; */
-    background-color: red;
     grid-column: span 6;
+    margin: 10px;
+    background-color: black;
+    outline: red solid 3px;
+    border-radius: 10px;
 }
 
 .redPlayer {
@@ -60,9 +67,11 @@
 }
 
 .greenTeam {
-    /* display: grid; */
-    background-color: green;
     grid-column: span 6;
+    margin: 10px;
+    background-color: black;
+    outline: #0F0 solid 3px;
+    border-radius: 10px;
 }
 
 .greenPlayer {
