Integrate assets and add styling

--- a/src/css/game.module.css
+++ b/src/css/game.module.css
@@ -25,6 +25,11 @@
   margin: 0;
 }
 
+.gameImage {
+  width: 35%;
+  margin: 20px 0;
+}
+
 .playerDisplay {
   grid-column: span 12;
   grid-row-start: 3
