--- a/src/css/playerDisplay.module.css
+++ b/src/css/playerDisplay.module.css
@@ -37,7 +37,7 @@
 .baseBadgeImage {
     vertical-align: middle;
     width: 20px;
-    margin: 0 0 4px 0;
+    margin: 0 0 4px;
 }
 
 .playerName {
