--- a/src/css/playerAction.module.css
+++ b/src/css/playerAction.module.css
@@ -4,7 +4,10 @@
   grid-template-rows: repeat(12, 1fr);
   grid-gap: 10px;
   margin: 10px;
-  background-color: blue;
+  background-color: black;
+  border: blue solid 3px;
+  border-radius: 10px;
+  padding: 10px;
   height: 420px;
   justify-content: start;
 }
