--- a/src/css/teamScoreDisplay.module.css
+++ b/src/css/teamScoreDisplay.module.css
@@ -2,5 +2,5 @@
     box-sizing: content-box;
     display: flex;
     justify-content: right;
-    margin: 20px;
+    margin: 5px 35px 10px 10px;
 }
