--- a/src/css/playerAction.module.css
+++ b/src/css/playerAction.module.css
@@ -1,15 +1,29 @@
 .actionScreen {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  grid-gap: 10px;
   margin: 7px;
   background-color: black;
   border: blue solid 3px;
   border-radius: 10px;
   padding: 10px;
   height: 350px;
+}
+
+.actions {
+  display: grid;
+  grid-column: span 3;
+  grid-template-rows: repeat(10, 1fr);
+  grid-gap: 10px;
   justify-content: start;
+}
+
+.winImage {
+  margin: auto;
+  grid-column: span 6;
+}
+
+.winImage img {
+  width: 100%;
 }
 
 .playerAction {
